[package]
name = "safe-ascii"
edition = "2018"
version = "1.1.2"
description = "A tool for sanitising files to printable ASCII characters."
authors = ["Steven Tang <yc@steventang.net>"]
homepage = "https://github.com/YC/safe_ascii"
repository = "https://github.com/YC/safe_ascii"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "3.2.17", default-features = false, features=["std", "derive"] }

[lib]
name = "safe_ascii"
crate-type = ["lib"]

[[bin]]
name = "safe-ascii"
test = true

[profile.release]
opt-level = 3
debug = false
lto = true
panic = 'unwind'
codegen-units = 1
strip = true
