[package]
name = "safe-ascii"
version = "1.2.0"
description = "A tool for sanitising files to printable ASCII characters."
authors = ["Steven Tang <yc@steventang.net>"]
homepage = "https://github.com/YC/safe_ascii"
repository = "https://github.com/YC/safe_ascii"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", default-features = false, features=["std", "derive", "help", "usage", "error-context"] }

[lib]
name = "safe_ascii"
crate-type = ["lib"]
path = "safe_ascii/src/lib.rs"

[[bin]]
name = "safe-ascii"
test = true

[profile.release]
opt-level = 3
debug = false
lto = true
panic = 'unwind'
codegen-units = 1
strip = true
